configured java project